feature-templates/nCino/dataset/01c1aM0Q-UI/.store/metadata/objects/nFORCE__Screen_Segment__c.object
<CustomObject>
    <description>The Screen Segment object is the junction object for sharing sections among a Credit Memo&apos;s templates.</description>
    <fields>
        <fullName>nFORCE__Order__c</fullName>
        <description>This field auto-generates and indicates the order of a specific section of the Credit Memo template.</description>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nFORCE__Screen_Section__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This required lookup field automatically populates and is used to specify the Screen Section record that is associated with the Credit Memo template.</description>
        <label>Screen Section</label>
        <referenceTo>nFORCE__Screen_Section__c</referenceTo>
        <relationshipLabel>Screen Segments</relationshipLabel>
        <relationshipName>Screen_Segments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nFORCE__Screen__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This required lookup field automatically populates and is used to specify the Screen record that is associated with the Credit Memo template.</description>
        <label>Screen</label>
        <referenceTo>nFORCE__Screen__c</referenceTo>
        <relationshipLabel>Screen Segments</relationshipLabel>
        <relationshipName>Screen_Segments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nFORCE__Type__c</fullName>
        <description>This optional picklist field displays to an administrator when selecting an action to take on the product package.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bulk Update</fullName>
                </value>
                <value>
                    <fullName>Bulk Update Field Grid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nFORCE__lookupKey__c</fullName>
        <description>The field is optional. If populated the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm).</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Screen Segment</label>
    <nameField>
        <label>Screen Segment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Screen Segments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>